Some additions to answer to Q1

--- a/A3_Boosting/AdaBoost.ipynb
+++ b/A3_Boosting/AdaBoost.ipynb
@@ -173,7 +173,9 @@
     "\n",
     "1. A single weak classifier achieving perfect classification is likely a dream too good to be true. A zero error has the consequence that the $\\alpha$ for that weak classifier will be either very very big, or infinite (depending on the internals of the computations). In turn, the weights for all datapoints will be updated to 0. At this point, we can conclude that either the data is very simple, or the hyperparameters are problematic.\n",
     "\n",
-    "    In the second case, one possible issue may be that we have trained such a long sequence of weak classifiers that the complete strong classifier has begun to overfit. We may also have included too many Haar-features in conjunction with too few training images, allowing the Haar-features to essentially encode the training images across the many weak classifiers.\n",
+    "    If the data is very simple, it could either mean the the problem is linearly separable, but it could also mean that too few training images were used. If the training images are very similar or don't represent the full population including weird edge cases, the model might be overtraining to these training images.\n",
+    "    \n",
+    "    In the case that the other hyperparameters are problematic, one possible issue may be that we have trained such a long sequence of weak classifiers that the complete strong classifier has begun to overfit. We may also have included too many Haar-features in conjunction with too few training images, allowing the Haar-features to essentially encode the training images across the many weak classifiers.\n",
     "\n",
     "    One suggested remedy would thus be to limit the number of iterations in training (essentially the number of weak classifiers), and/or to decrease the number of Haar-features (if appropriate) and/or to increase the number of training images (if possible).\n",
     "\n",
@@ -1036,7 +1038,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
