--- a/Laboration3_RNN/RNN-Lab-2023 copy.ipynb
+++ b/Laboration3_RNN/RNN-Lab-2023 copy.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {
     "id": "EaFUyzF-Cus2",
     "tags": []
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {
     "id": "Eay_PCwACus4",
     "tags": []
@@ -175,7 +175,7 @@
        "['i', 'returned', 'to', 'japan', '.']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
     "\n",
     "def sentences(filename, idx):\n",
     "    # Use idx=0 for English, idx=1 for Swedish\n",
-    "    with open(filename, \"rt\", encoding=\"utf-8\") as source:\n",
+    "    with open(filename, \"rt\") as source:\n",
     "        for line in source:\n",
     "            yield line.rstrip().split(\"\\t\")[idx].split()\n",
     "\n",
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "id": "R29hmyaRCus5",
     "tags": []
@@ -241,20 +241,13 @@
     "\n",
     "def make_vocab(sentences, max_size):\n",
     "    \"\"\"Return a list of the `max_size` most frequent tokens in `sentences`.\"\"\"\n",
-    "    \n",
+    "\n",
+    "    # TODO\n",
     "    # 1. Count of how often each word occurs in the data\n",
-    "    list_words = [word for sentence in list(sentences) for word in sentence]\n",
-    "    dict_counts = Counter(list_words)\n",
-    "\n",
     "    # 2. Sort the words by their frequency, in descending order\n",
-    "    list_words_sorted = sorted(dict_counts, key=dict_counts.get, reverse=True)\n",
-    "\n",
     "    # 3. Make a list of the special tokens plus the most frequent words, up to a length of `max_size`.\n",
-    "    list_tokens = [\"<pad>\", \"<unk>\", \"<bos>\", \"<eos>\"] + list_words_sorted[:max_size - 4]\n",
-    "\n",
     "    # 4. Return the list\n",
-    "    return list_tokens\n",
-    "    "
+    "    raise NotImplementedError"
    ]
   },
   {
@@ -268,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "id": "onyml-oDCus7",
     "tags": []
@@ -292,22 +285,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "id": "tZBil9ezCus8",
     "tags": [
      "solution"
     ]
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All good!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def test1():\n",
     "    assert len(src_vocab) == 5000\n",
@@ -330,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -350,19 +335,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor([   5 1005   11  530  188    4], shape=(6,), dtype=int64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "example = \"i returned to japan yesterday .\".split()\n",
     "print(tgt_lookup(example))"
@@ -383,22 +360,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "returned\n",
-      "1005\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## TODO: Your code here\n",
-    "print(tgt_vocab[1005])\n",
-    "print(tgt_vocab.index(\"returned\"))"
+    "## TODO: Your code here"
    ]
   },
   {
@@ -421,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {
     "id": "TkFTb0LkCus9",
     "tags": []
@@ -460,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {
     "id": "t1tyWbfbCus-",
     "tags": []
@@ -481,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {
     "id": "DC2j_oZyCus_",
     "tags": []
@@ -496,21 +462,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {
     "id": "dYhTBym7Cus_",
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor([[  6  10 245  15  20   7]], shape=(1, 6), dtype=int64)\n",
-      "tf.Tensor([[ 29   9 477  55  28   8   3]], shape=(1, 7), dtype=int64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x, y = example(train_dataset, 42)\n",
     "print(x)\n",
